# intgemm_fallback

./: .gitmodules  CMakeLists.txt  README.md
src/: fallback.cpp
